Feature/s3 unit tests (#216)
* scaffolding

* add mock interface for s3 api

* create mock implementations for s3 client and blobstorage

* add helper functions

* add tests for NewS3BlobStorage

* add test for isenabled

* add test for store

* add test for retrieve

* add test for delete

* add tests for exists

* switch time to 30 * time.Second

* remove helpers

* update: fails of HeadObjet function for transient network error etc.

* update: fails of HeadObjet function for transient network error etc.

* update: add test to test.yaml file and update the Makefile

* fix: recursive wildcard issue in file path

---------

Co-authored-by: Aravinda-HWK <aravinda.20@cse.mrt.ac.lk>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -54,6 +54,13 @@ jobs:
           go test -v ./internal/models/...
           echo "::endgroup::"
 
+      # Blob Storage Tests
+      - name: Test Blob Storage
+        run: |
+          echo "::group::Blob Storage Tests"
+          go test -v ./internal/blobstorage/...
+          echo "::endgroup::"
+
       # IMAP Server Tests - Authentication
       - name: Test IMAP Authentication
         run: |
